ft(app): integrated services
